@@ -37,3 +37,4 @@
 ---
 
 * Fix by Ben Fyvie for daily rule crossing over a year boundary
+* Additional accessor methods on validations and rules for easy use in microformats (thanks @jamesarosen)
